Fix tab spacing

--- a/cloudapp/src/app/main/main.component.scss
+++ b/cloudapp/src/app/main/main.component.scss
@@ -47,3 +47,9 @@ textarea {
         }
     }
 }
+
+.tabs {
+    margin-top: 1em;
+    display: flex;
+    justify-content: center
+}
